# nmdc_mass_spectrometry_metadata_generation

./: .buildinfo  .gitignore  .pre-commit-config.yaml  README.md  URL_FUNCTIONALITY.md  __config.yml  functions.html  genindex.html  index.html  installation.html  main.py  objects.inv  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  search.html  searchindex.js  test_metadata_with_urls.csv  test_url_functionality.py  test_workflow_url.py  usage.html
.doctrees/: environment.pickle  functions.doctree  index.doctree  installation.doctree  usage.doctree
.doctrees/source/: conf.doctree  modules.doctree  nmdc_notebook_tools.doctree
.github/: dependabot.yml
.github/workflows/: documentation.yml  pre_release_tests.yml  runtime_triggered_dep_update.yml  tests.yml
_modules/: index.html
_modules/nmdc_ms_metadata_gen/: bio_ontology_api.html  biosample_generator.html  data_classes.html  di_nom_metadata_generator.html  gcms_metab_metadata_generator.html  id_pool.html  lcms_lipid_metadata_generator.html  lcms_metab_metadata_generator.html  lcms_metadata_generator.html  lcms_nom_metadata_generator.html  material_processing_generator.html  metadata_generator.html  metadata_parser.html  sheet_generator.html
_modules/src/: bio_ontology_api.html  data_classes.html  di_nom_metadata_generator.html  gcms_metab_metadata_generator.html  lcms_lipid_metadata_generator.html  lcms_metab_metadata_generator.html  lcms_metadata_generator.html  lcms_nom_metadata_generator.html  metadata_generator.html  metadata_parser.html  nom_metadata_generation.html  nom_metadata_generator.html
_sources/: functions.rst.txt  index.rst.txt  usage.rst.txt
docs/: conf.py  functions.rst  index.rst
docs/source/: modules.rst
nmdc_ms_metadata_gen/: __init__.py  bio_ontology_api.py  biosample_generator.py  changesheet_generator.py  data_classes.py  di_nom_metadata_generator.py  gcms_metab_metadata_generator.py  id_pool.py  lcms_lipid_metadata_generator.py  lcms_metab_metadata_generator.py  lcms_metadata_generator.py  lcms_nom_metadata_generator.py  main.py  material_processing_generator.py  metadata_generator.py  metadata_input_check.py  metadata_parser.py  nom_metadata_generator.py  schema_bridge.py  sheet_generator.py  study_metadata.py  utils.py  validate_yaml_outline.py
nmdc_ms_metadata_gen/example_data/: biosample_creation_required_info.csv  config_example.toml  sample_metadata_with_urls.csv
nmdc_ms_metadata_gen/tests/: SanClements-NOM_test.yaml  add_info_test_mapping_input.csv  spruce_proteins_test.yaml  test_associated_studies_from_csv.py  test_biosample_gen.py  test_changesheet_workflowsheet_output  test_changesheet_workflowsheet_output_changesheet.csv  (+17 more)
source/: conf.html  modules.html  nmdc_notebook_tools.html
src/: api_info_retriever.py  bio_ontology_api.py  data_classes.py  di_nom_metadata_generator.py  example.py  gcms_metab_metadata_generator.py  gcms_metadata_generator.py  lcms_lipid_metadata_generator.py  lcms_metab_metadata_generator.py  lcms_metadata_generator.py  lcms_nom_metadata_generator.py  main.py  metadata_generator.py  metadata_parser.py  nom_metadata_generation.py  nom_metadata_generator.py  utils.py
tests/: test_example.py
(+171 files in other folders)
