[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nmdc_mass_spectrometry_metadata_generation"
version = "2.3.0"
description = "A Python library for metdata generation for mass spectrometry data as it relates to the NMDC Schema."
authors = [
    { name = "Olivia Hess", email = "olivia.hess@pnnl.gov" }, { name= "Katherine Heal", email = "katherine.heal@pnnl.gov"}
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]
license = { file = "LICENSE" }
[tool.setuptools]
py-modules = ["main"]  # This tells setuptools to include main.py
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
[project.scripts]
nmdc-ms-metadata-gen = "main:cli"
[tool.setuptools.packages.find]
where = ["."]
include = ["nmdc_ms_metadata_gen*"]
